--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -8,6 +8,15 @@
   <body id="page-top">
     <h1>Welcome to FlatBank</h1>
     <h3>Log In Please</h3>
-
+    <form action='/login' method='post'>
+    <label for='username'>
+    Username: </label><br>
+    <input type='text' value='username' name='username' required>
+    <br>
+    <label for='password'>
+    Password: </label><br>
+    <input type='text' value='password' name='password' required>
+    <input type='submit' value='Login' name='Login'>
+    </form>
   </body>
 </html>
